Bug 1854389 - Allow inspecting the innerChannel of an ObliviousHttpChannel r=Gijs,necko-reviewers,jesup

Differential Revision: https://phabricator.services.mozilla.com/D189122